# m2-qty-sync

./: .gitignore  CHANGELOG.md  EVENTS.md  INSTALL.md  LICENSE  MANIFEST.in  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SUMMARY.md  pyproject.toml  setup.py  test_plugin_loaded.py
inventree_magento2_sync/: __init__.py  magento_api.py  plugin.py  version.py
inventree_magento2_sync/tests/: __init__.py  test_magento_api.py
