[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-magento2-sync"
version = "1.0.0"
description = "InvenTree plugin to sync stock quantities to Magento 2"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "InvenTree Community"}
]
keywords = ["inventree", "plugin", "magento2", "stock", "inventory", "sync"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/inventree/inventree-magento2-sync"
Repository = "https://github.com/inventree/inventree-magento2-sync"
Issues = "https://github.com/inventree/inventree-magento2-sync/issues"

[project.entry-points."inventree_plugins"]
Magento2StockSyncPlugin = "inventree_magento2_sync.plugin:Magento2StockSyncPlugin"
